architecture in angular and create login with google base for angular

--- a/Surface-API/Surface-API/Surface-API.csproj
+++ b/Surface-API/Surface-API/Surface-API.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Surface-Entities\Surface-Entities.csproj" />
+    <ProjectReference Include="..\Surface-Services\Surface-Services.csproj" />
+  </ItemGroup>
+
 </Project>
