--- a/Surface-API/Surface-DataLayer/Surface-DataLayer.csproj
+++ b/Surface-API/Surface-DataLayer/Surface-DataLayer.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Surface-Common\Surface-Common.csproj" />
+    <ProjectReference Include="..\Surface-Entities\Surface-Entities.csproj" />
+  </ItemGroup>
+
 </Project>
