--- a/Surface-API/Surface-Services/Surface-Services.csproj
+++ b/Surface-API/Surface-Services/Surface-Services.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Surface-DataLayer\Surface-DataLayer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="profiles\" />
+  </ItemGroup>
+
 </Project>
