--- a/Surface-Project/Surface-API/Surface-BusinessLayer/Surface-BusinessLayer.csproj
+++ b/Surface-Project/Surface-API/Surface-BusinessLayer/Surface-BusinessLayer.csproj
@@ -7,4 +7,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Surface-Common\Surface-Common.csproj" />
+    <ProjectReference Include="..\Surface-DataAccessLayer\Surface-DataAccessLayer.csproj" />
+  </ItemGroup>
+
 </Project>
