--- a/Surface-Project/Surface-UI/package.json
+++ b/Surface-Project/Surface-UI/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.1.6",
     "@angular/platform-browser-dynamic": "^16.1.6",
     "@angular/router": "^16.1.6",
+    "bootstrap": "^5.3.1",
     "jest-editor-support": "*",
     "npm": "^9.8.1",
     "rxjs": "~7.8.1",
