Inital Migration: Basemodel: DdnModel, Basemodel Tables: Role,Status,StatusGroup,User,LoginProvider Added

--- a/Surface-Project/Surface-API/Surface-DataAccessLayer/Surface-DataAccessLayer.csproj
+++ b/Surface-Project/Surface-API/Surface-DataAccessLayer/Surface-DataAccessLayer.csproj
@@ -16,4 +16,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Surface-Entities\Surface-Entities.csproj" />
+  </ItemGroup>
+
 </Project>
