--- a/.gitignore
+++ b/.gitignore
@@ -170,6 +170,8 @@ AutoTest.Net/
 # Installshield output folder
 [Ee]xpress/
 
+#Ignore Migrations
+Migrations/
 # DocProject is a documentation generator add-in
 DocProject/buildhelp/
 DocProject/Help/*.HxT
