--- a/Surface-Project/Surface-API/Surface-API/appsettings.json
+++ b/Surface-Project/Surface-API/Surface-API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server= 192.168.0.109; Database=SurfaceDb;User Id= Surface; Password = Surface@Surface; Trust Server Certificate =True"
+  },
   "AllowedHosts": "*"
 }
