--- a/Surface-Project/Surface-API/Surface-API/appsettings.json
+++ b/Surface-Project/Surface-API/Surface-API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server= 192.168.0.109; Database=SurfaceDb;User Id= Surface; Password = Surface@Surface; Trust Server Certificate =True"
+    "DefaultConnection": "Server=.; Database=SurfaceDb;User Id= Surface; Password = Surface@Surface; Trust Server Certificate =True"
   },
   "AllowedHosts": "*"
 }
