--- a/.gitignore
+++ b/.gitignore
@@ -172,6 +172,8 @@ AutoTest.Net/
 
 #Ignore Migrations
 Migrations/
+appsettings.Development.json
+appsettings.json
 # DocProject is a documentation generator add-in
 DocProject/buildhelp/
 DocProject/Help/*.HxT
