--- a/.gitignore
+++ b/.gitignore
@@ -172,6 +172,10 @@ AutoTest.Net/
 
 #Ignore Migrations
 Migrations/
+
+#Ignore AppSettings
+appsettings.json
+
 # DocProject is a documentation generator add-in
 DocProject/buildhelp/
 DocProject/Help/*.HxT
