--- a/Surface-Project/Surface-UI/package.json
+++ b/Surface-Project/Surface-UI/package.json
@@ -9,6 +9,9 @@
     "test": "ng test"
   },
   "private": true,
+  "engines": {
+    "node" : ">=16 <18"
+  },
   "dependencies": {
     "@abacritt/angularx-social-login": "^2.1.0",
     "@angular/animations": "^16.1.6",
