--- a/Surface-Project/Surface-UI/package.json
+++ b/Surface-Project/Surface-UI/package.json
@@ -15,7 +15,7 @@
     "@angular/cdk": "^16.1.6",
     "@angular/common": "^16.1.6",
     "@angular/compiler": "^16.1.6",
-    "@angular/core": "^16.1.6",
+    "@angular/core": "^16.1.6", 
     "@angular/forms": "^16.1.6",
     "@angular/material": "^16.1.6",
     "@angular/platform-browser": "^16.1.6",
@@ -33,6 +33,7 @@
     "@angular/cli": "~16.1.5",
     "@angular/compiler-cli": "^16.1.6",
     "@types/jasmine": "~4.3.5",
+    "@types/node": "^20.4.5",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.2.0",
