Add : Api structure

--- a/Surface-Project/Surface-API/Surface-API/appsettings.Development.json
+++ b/Surface-Project/Surface-API/Surface-API/appsettings.Development.json
@@ -4,5 +4,17 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=PCT78\\SQLSERVER2017; Database=SurfaceDbTatva;User Id= sa; Password = Tatva@123; Trust Server Certificate =True",
+    //"DefaultConnection": "Server=PCT78\\SQLSERVER2017; Database=SurfaceDb;User Id= surface; Password = Surface@Surface; Trust Server Certificate =True"
+
+  },
+  "JwtSetting": {
+    "Issuer": "https://localhost:44325",
+    "Audience": "https://localhost:44325",
+    "Key": "s+H8JEMtFlL/NYcKm0nm+TtPl/tpM55hO1CpIbKxG/8=",
+    "ExpiryMinutes": 60
   }
 }
