--- a/Surface-Project/Surface-API/Surface-DataAccessLayer/Surface-DataAccessLayer.csproj
+++ b/Surface-Project/Surface-API/Surface-DataAccessLayer/Surface-DataAccessLayer.csproj
@@ -14,6 +14,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.4" />
   </ItemGroup>
 
   <ItemGroup>
