--- a/Surface-Project/Surface-API/Surface-API/appsettings.Development.json
+++ b/Surface-Project/Surface-API/Surface-API/appsettings.Development.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"DefaultConnection": "Server=PCT78\\SQLSERVER2017; Database=SurfaceDbTatva;User Id= sa; Password = Tatva@123; Trust Server Certificate =True",
-    "DefaultConnection": "Server=.;Database=YourDatabaseName;Integrated Security=true;TrustServerCertificate=true"
+    "DefaultConnection": "Server=.;Database=SurfaceDb;Integrated Security=true;TrustServerCertificate=true"
 
   },
   "JwtSetting": {
