done :  login and registration

--- a/Surface-Project/Surface-API/Surface-API/appsettings.Development.json
+++ b/Surface-Project/Surface-API/Surface-API/appsettings.Development.json
@@ -16,5 +16,19 @@
     "Audience": "https://localhost:44325",
     "Key": "s+H8JEMtFlL/NYcKm0nm+TtPl/tpM55hO1CpIbKxG/8=",
     "ExpiryMinutes": 60
+  },
+  "EmailSetting": {
+    "From": "noreply.ci.tatvasoft@gmail.com",
+    "Password": "vwrhsjftwdkwpoom",
+    "Username": "TSE_2023_02",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "EnableSsl": "true"
+  },
+  "ResetPasswordJwtSetting": {
+    "Issuer": "https://localhost:44302",
+    "Audience": "https://localhost:44302",
+    "Key": "s+H8JEMtFlL/NYcKm0nm+TtPl/tpM55hO1CpIbKxG/8=",
+    "ExpiryMinutes": 5
   }
 }
