--- a/Surface-Project/Surface-API/Surface-API/Surface-API.csproj
+++ b/Surface-Project/Surface-API/Surface-API/Surface-API.csproj
@@ -31,4 +31,8 @@
     <ProjectReference Include="..\Surface-BusinessLayer\Surface-BusinessLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\assets\" />
+  </ItemGroup>
+
 </Project>
