team invite with mail

--- a/Surface-Project/Surface-API/Surface-API/appsettings.Development.json
+++ b/Surface-Project/Surface-API/Surface-API/appsettings.Development.json
@@ -18,8 +18,8 @@
     "ExpiryMinutes": 60
   },
   "EmailSetting": {
-    "From": "noreply.ci.tatvasoft@gmail.com",
-    "Password": "vwrhsjftwdkwpoom",
+    "From": "fake79318@gmail.com",
+    "Password": "qaglgcqggsxigdcp",
     "Username": "TSE_2023_02",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
