--- a/Surface-Project/Surface-API/Surface-API/appsettings.Development.json
+++ b/Surface-Project/Surface-API/Surface-API/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PCT78\\SQLSERVER2017; Database=SurfaceDbTatva;User Id= sa; Password = Tatva@123; Trust Server Certificate =True",
+    "DefaultConnection": "Server=PCA112\\SQL2019,1433; Database=SurfaceDb;User Id= sa; Password = Tatva@123; Trust Server Certificate =True"
     //"DefaultConnection": "Server=.;Database=SurfaceDb;Integrated Security=true;TrustServerCertificate=true"
 
   },
